ensure bechmarks will hit our path